syntax = "proto3";

package raft_service;

// Raft 节点间通信消息
message AppendEntriesRequest {
    string data = 1; // 简化处理，实际可以使用字节流
}

message AppendEntriesResponse {
    bool success = 1;
    string data = 2;
}

message VoteRequest {
    string data = 1;
}

message VoteResponse {
    bool success = 1;
    string data = 2;
}

message InstallSnapshotRequest {
    string data = 1;
}

message InstallSnapshotResponse {
    bool success = 1;
    string data = 2;
}

service RaftService {
    // Raft 内部通信
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc Vote(VoteRequest) returns (VoteResponse);
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}
